--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
 2004-09-13  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* bytecode.c (BYTE_CODE_QUIT): Add missing AFTER_POTENTIAL_GC.
+	(Fbyte_code): Remove dead code after `wrong_type_argument'.
+
 	* alloc.c (Fgarbage_collect): Mark keyboards, gtk data, and specpdl
 	before doing the mark_stack_check_gcpros since they are not on the stack.
 
