--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-14  Kim F. Storm  <storm@cua.dk>
+
+	* faces.el (cursor): Add face-no-inherit property.  Doc fix.
+
 2004-09-14  Simon Josefsson  <jas@extundo.com>
 
 	* files.el (auto-mode-alist): Map .soa and .zone to dns-mode.
