Revision: miles@gnu.org--gnu-2004/emacs--cvs-trunk--0--patch-549
Use symbol-matching for generic-mode keywords

2004-09-15  Miles Bader  <miles@gnu.org>

   * lisp/generic.el (generic-make-keywords-list): Use symbol rather than
   word anchors in regexp.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-15  Miles Bader  <miles@gnu.org>
+
+	* generic.el (generic-make-keywords-list): Use symbol rather than
+	word anchors in regexp.
+
 2004-09-14  Sean O'Rourke  <sorourke@cs.ucsd.edu>
 
 	* ibuf-ext.el (define-ibuffer-filter filename): If buffer has
