Revision: miles@gnu.org--gnu-2004/emacs--cvs-trunk--0--patch-552
Merge from gnus--rel--5.10

Patches applied:

 * miles@gnu.org--gnu-2004/gnus--rel--5.10--patch-27
   Use the same directory explicit id-tags as Emacs where possible

 * miles@gnu.org--gnu-2004/gnus--rel--5.10--patch-28
 - miles@gnu.org--gnu-2004/gnus--rel--5.10--patch-29
   Update from CVS

--- a/lisp/gnus/ChangeLog
+++ b/lisp/gnus/ChangeLog
@@ -1,3 +1,12 @@
+2004-09-16  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* gnus-sum.el (gnus-fetch-old-headers): Added custom choices `t'
+	and `invisible'.
+
+2004-09-13  Simon Josefsson  <jas@extundo.com>
+
+	* nnimap.el (nnimap-demule): Revert 2004-08-30 change.
+
 2004-09-13  Reiner Steib  <Reiner.Steib@gmx.de>
 
 	* gnus-sum.el (gnus-summary-copy-article): Fixed doc string.
