*** empty log message ***

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,16 @@
 2004-09-17  Dan Nicolaescu  <dann@ics.uci.edu>
 
+	* ediff-init.el (ediff-current-diff-face-A)
+	(ediff-current-diff-face-B, ediff-current-diff-face-C)
+	(ediff-current-diff-face-Ancestor)
+	(ediff-fine-diff-face-A, ediff-fine-diff-face-B)
+	(ediff-fine-diff-face-C, ediff-fine-diff-face-Ancestor)
+	(ediff-even-diff-face-A, ediff-even-diff-face-B)
+	(ediff-even-diff-face-C, ediff-even-diff-face-Ancestor)
+	(ediff-odd-diff-face-A, ediff-odd-diff-face-B)
+	(ediff-odd-diff-face-C, ediff-odd-diff-face-Ancestor):
+	Use min-colors.
+
 	* term.el (term-down): Perform vertical motion if DOWN is negative.
 	(term-exec-1): Set both TERMCAP and TERMINFO
 	unconditionally.
