*** empty log message ***

--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,7 +1,7 @@
 2004-09-18  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* FOR-RELEASE (Indications): Clean up and update checklists for
-	Emacs and Elisp manual.
+	Emacs and Elisp manuals.
 
 2004-09-11  Kim F. Storm  <storm@cua.dk>
 
