--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-18  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* xterm.c (x_term_init): Work around a bug in some X servers.
+
 2004-09-18  Richard M. Stallman  <rms@gnu.org>
 
 	* buffer.c (syms_of_buffer) <default-major-mode>: Doc fix.
