--- a/man/calc.texi
+++ b/man/calc.texi
@@ -544,6 +544,9 @@ held down are shown as @kbd{C-x}.  Keys pressed with Meta held down
 are shown as @kbd{M-x}.  Other notations are @key{RET} for the
 Return key, @key{SPC} for the space bar, @key{TAB} for the Tab key,
 @key{DEL} for the Delete key, and @key{LFD} for the Line-Feed key.
+The @key{DEL} key is called Backspace on some keyboards, it is
+whatever key you would use to correct a simple typing error when
+regularly using Emacs.
 
 (If you don't have the @key{LFD} or @key{TAB} keys on your keyboard,
 the @kbd{C-j} and @kbd{C-i} keys are equivalent to them, respectively.
