--- a/etc/NEWS
+++ b/etc/NEWS
@@ -99,6 +99,10 @@ types any more.  Add -DUSE_LISP_UNION_TYPE if you want union types.
 * Changes in Emacs 21.4
 
 +++
+** In processing a local variables list, Emacs strips the prefix and
+suffix are from every line before processing all the lines.
+
++++
 ** `apply-macro-to-region-lines' now operates on all lines that begin
 in the region, rather than on all complete lines in the region.
 
@@ -244,6 +248,7 @@ The new file etc/compilation.txt gives examples of each type of message.
 
 ** Compilation mode enhancements:
 
++++
 *** New user option `compilation-environment'.
 This option allows you to specify environment variables for inferior
 compilation processes without affecting the environment that all
