--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-20  Jason Rumney  <jasonr@gnu.org>
+
+	* startup.el (command-line) [windows-nt]: Try .emacs first, then
+	_emacs, but revert to .emacs if neither exists in home directory.
+
 2004-09-20  John Paul Wallington  <jpw@gnu.org>
 
 	* bindings.el (completion-ignored-extensions): Add .dfsl.
