--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-20  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* subr.el (run-mode-hooks): Run `after-change-major-mode-hook'
+	after the mode-hooks instead of before.  Doc fix.
+
 2004-09-20  Jason Rumney  <jasonr@gnu.org>
 
 	* startup.el (command-line) [windows-nt]: Try .emacs first, then
@@ -20,9 +25,9 @@
 
 	* eshell/esh-ext.el (eshell-explicit-command-char): Doc fix.
 
-	* progmodes/make-mode.el (makefile-fill-paragraph): 
+	* progmodes/make-mode.el (makefile-fill-paragraph):
 	Don't insist on spaces when looking for comments.  # is enough.
-	
+
 	* files.el (hack-local-variables): Copy the variables list
 	to another buffer, strip prefixes and suffixes there, then read.
 	(enable-local-eval): Doc fix.
