*** empty log message ***

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -2248,8 +2248,7 @@ configuration files.
 * Lisp Changes in Emacs 21.4
 
 ** Major mode functions now run the new normal hook
-`after-change-major-mode-hook', at the end, just before the mode
-dependent hooks.
+`after-change-major-mode-hook', at their very end, after the mode hooks.
 
 +++
 ** `auto-save-file-format' has been renamed to
