--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-21  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* subr.el (after-change-major-mode-hook): Doc fix.
+
 2004-09-21  Kenichi Handa  <handa@m17n.org>
 
 	* descr-text.el (describe-char): Checking of quail activation
